# cellbin2

./: .gitignore  README.md  demo.py  multimodal_cell_merge.py  pyproject.toml  test_gpu.py
cellbin2/: __init__.py  cellbin_pipeline.py  mfws_apicall.py
cellbin2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cellbin2/config/: Chip-Matching T FF R.json  Chip-Matching_N_FFPE_R.json  Chip-Matching_T_FF.json  Stereo-CITE T FF R.json  Stereo-CITE T FF.json  Stereo-CITE_T_FF.json  Stereo-CITE_T_FF_R.json  Stereo-seq N FFPE R.json  Stereo-seq N FFPE.json  Stereo-seq T FF R.json  Stereo-seq T FF.json  Stereo-seq_N_FFPE.json  Stereo-seq_N_FFPE_R.json  Stereo-seq_T_FF.json  Stereo-seq_T_FF_R.json  cellbin.yaml  chip_mask.json.enc  weights_url.json
cellbin2/contrib/: calibration.py  cell_filter.py  cell_segmentor.py  cellpose3.py  cellpose_segmentor.py  cellpose_segmentor_2.py  cellposesam.py  chip_box_scell.py  chip_detector.py  chip_transform.py  cpsam_segmentor.py  mask_manager.py  multimodal_cell_merge.py  omnipose_seg.py  tissue_segmentor.py  track_align.py
cellbin2/dnn/: onnx_net.py
cellbin2/image/: augmentation.py  transform.py
cellbin2/matrix/: matrix.py
cellbin2/modules/: cellmask_fixer.py  image_qc.py  metadata.py  metrics.py  naming.py  report_m.py  scheduler.py
paper/: A02497C1.json  A03085A1D3.json  B01715B4.json  B03120F1.json  B04001D6.json  C01344C4.json  C02533C1.json  C04042E2.json  C04495G4.json  FP200000449TL_C3.json  README.md  UK799999550GO_X6.json  VisiumHD.py  Void_segmentation.py  X95957V7.json  X97466X8.json  Y95998W3.json  Y968792V3.json  Y96879U8.json  Y98284Y5.json  Y98792V6T5.json  Z96914Z8W6.json  Z97502X8.json  Z97822X8W8.json  xenium.py
test/: demo.py  test_cellbin_pipeline.py
tutorials/: multimodal_cell_merge.py  single_cell_case_analyst.py  test_gpu.py
(+152 files in other folders)
