[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellbin2"
# Parse version number
dynamic = ["version"]
description = "A framework for generating single-cell gene expression data"
authors = [
    { name = "cell bin research group", email = "bgi@genomics.cn" }
]
dependencies = [
    "torch @ https://download.pytorch.org/whl/cu118/torch-2.7.1%2Bcu118-cp38-cp38-linux_x86_64.whl",
    "torchvision @ https://download.pytorch.org/whl/cu118/torchvision-0.18.1%2Bcu118-cp38-cp38-linux_x86_64.whl",
    "torchaudio @ https://download.pytorch.org/whl/cu118/torchaudio-2.7.1%2Bcu118-cp38-cp38-linux_x86_64.whl",
    
    "numpy==1.23.5",
    "h5py==3.8.0",
    "objtyping",
    "pydantic",
    "opencv-python==4.8.0.76",
    "imagecodecs==2023.3.16",
    "aenum",
    "tqdm==4.65.0",
    "tifffile==2023.2.3",
    "scipy",
    "scikit-image==0.21.0",
    "numba==0.56.4",
    "onnxruntime-gpu==1.15.1",
    "scikit-learn==1.3.0",
    "imreg_dft==2.0.0",
    "prettytable==3.11.0",
    "PyYAML",
    "matplotlib==3.7.1",
    "requests",
    "pandas==1.5.3",
]
requires-python = ">=3.8"

[project.system-requires]
linux = [
    "cuda >=11.8",
    "cudnn >=8"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "cellbin2.__version__"}

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dependency-links]
extra-index-url = [
    "https://download.pytorch.org/whl/cu118"
]

[project.optional-dependencies]
cp = ['cellpose==4.0.5', 'patchify==0.2.3']
rs = [
    'gefpy==1.2.3',
]
rp = [
    'mapbox_earcut',
    'fastcluster==1.2.6',
    'stereopy==1.6.0',
    'beautifulsoup4',
    'csscompressor',
    'jsmin'
]